agregue las letritas, portadas y arregle las barras

--- a/imports/ui/admin/modals/galeriaFotos.html
+++ b/imports/ui/admin/modals/galeriaFotos.html
@@ -36,6 +36,6 @@
 
 <template name="carouselItem">
     <div class="item {{#if active}}active{{/if}}" style="width:997px;height:558px">
-        <img style="max-height:100%;max-width:100%;margin:auto" src="{{foto}}" alt="{{foto}}">
+        <img style="max-height:100%;max-width:100%;height:100%;margin:auto" src="{{foto}}" alt="{{foto}}">
     </div>
 </template>
