--- a/imports/ui/admin/navbar.html
+++ b/imports/ui/admin/navbar.html
@@ -33,6 +33,9 @@
                         <li>
                             <a href="/admin/libros"><i class="fa fa-book fa margin-right-10" aria-hidden="true" ></i>Libros</a>
                         </li>
+                        <li>
+                            <a href="/admin/prensa"><i class="fa fa-microphone fa margin-right-10" aria-hidden="true" ></i>Prensa</a>
+                        </li>
                         <!--<li>-->
                             <!--{{>loginButtons}}-->
                         <!--</li>-->
