--- a/client/main.html
+++ b/client/main.html
@@ -2,5 +2,7 @@
   <title>clubdelectura</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <link rel='shortcut icon' href='favicon.ico?v=2' type='image/x-icon'>
+
 </head>
 
