--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -1,8 +1,11 @@
 <template name="colaboradores">
-    <div style="background-color:#2d3e54;min-width:100wh;min-height:100vh">
-        <div class="titulo" style="padding:25px">
-            <span style=" font-family:'Montserrat';font-weight: 700;font-size: 24px;line-height:30px;font-style: normal; color:white;">
-                Colaboradores
+    <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
+        <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
+            <div style="width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
+
+            </div>
+            <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
+                COLABORADORES
             </span>
         </div>
         <!--<div class="presentacion" style="margin-left:65px;margin-right:65px">-->
@@ -10,7 +13,7 @@
                 <!--{{presentacion}}-->
             <!--</p>-->
         <!--</div>-->
-        <div class="list-personas" style="margin-top:25px">
+        <div class="list-personas" style="width:900px;margin:auto;">
                 <div class="persona" style="margin-left:65px;margin-right:65px">
                     <div class="row">
                     {{#each colaboradores}}
@@ -21,6 +24,10 @@
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
                     {{/each}}
+                        <div style="background-color:#2d3e54;position: fixed;width:100%;top:0px;left:0px;z-index:-1;padding-top:100px" >
+                            <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
+                            <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
+                        </div>
                     </div>
                 </div>
             <div style="height:60px;width:100%">
@@ -31,11 +38,20 @@
     <div id="nav" data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
         <ul>
             <a href="/"><li class="horizontal-menu-item" data-value="home">HOME</li></a>
-            <a href="/nosotros"><li class="horizontal-menu-item" data-value="colaboradores">NOSOTROS</li></a>
-            <a href="https://www.facebook.com/groups/clubdelectura.uy/"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
-            <li class="horizontal-menu-item" data-value="libros">LIBROS LEIDOS</li>
-            <li class="horizontal-menu-item" data-value="reseñas">RESEÑAS</li>
-            <!--<li class="horizontal-menu-item">ACTIVIDADES</li>-->
+            <a href="/nosotros"><li class="horizontal-menu-item" data-value="prensa">NOSOTROS</li></a>
+            <a href="https://www.facebook.com/groups/clubdelectura.uy/"  target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
+            <a href="/archivo/prensa"><li class="horizontal-menu-item" data-value="prensa">PRENSA</li></a>
+            <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item" data-value="mas">
+                <!--<div class="dropdown dropup">-->
+                <div class="btn-secondary" data-toggle="dropdown" style="margin:-25px;padding:25px">
+                    MAS
+                </div>
+                <div class="dropdown-menu" style="background-color:#171f2a;" aria-labelledby="dropdownMenuButton">
+                    <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/libros">Libros leidos</a>
+                    <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/actividades">Actividades</a>
+                    <a class="horizontal-menu-item-2 dropdown-item"  href="#">Reseñas</a>
+                </div>
+            </li>
         </ul>
     </div>
 </template>
