--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -9,7 +9,9 @@
 <!--montevideo min 0 - max 1000 - fin 1500-->
 <!--tipita inicio 1200 - min 3000 - max 4000 - fin 4500-->
 <!---->
+
 <template name="Home">
+
     <!--<a href="https://imgflip.com/i/1k24g3"><img src="https://i.imgflip.com/1k24g3.jpg" title="made at imgflip.com"/></a>-->
     {{#if isDesktop}}
       <div  data-0="top:0px;display:block" data-700="top:0px" data-1000="top:-1200px;" data-1500="top:-1500px;display:none" class="no-height-mobil caratula">
@@ -200,18 +202,18 @@
         <ul>
            <a href="/nosotros"><li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li></a>
            <a href="https://www.facebook.com/groups/clubdelectura.uy/" target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
-           <li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="reseñas">RESEÑAS</li>
-           <a href="/colaboradores"><li class="horizontal-menu-item {{isSelected "colaboradores"}}" data-value="colaboradores">COLABORADORES</li></a>
+           <a href="/archivo/prensa"><li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="prensa">PRENSA</li></a>
+            <a href="/colaboradores"><li class="horizontal-menu-item {{isSelected "colaboradores"}}" data-value="colaboradores">COLABORADORES</li></a>
             <!--<li class="horizontal-menu-item {{isSelected "libros"}}" data-value="libros">LIBROS LEIDOS</li>-->
             <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item {{isSelected "libros"}}" data-value="libros">
                 <!--<div class="dropdown dropup">-->
                 <div class="btn-secondary" data-toggle="dropdown" style="margin:-25px;padding:25px">
-                    ARCHIVO
+                    MAS
                 </div>
                 <div class="dropdown-menu" style="background-color:#171f2a;" aria-labelledby="dropdownMenuButton">
                     <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/libros">Libros leidos</a>
                     <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/actividades">Actividades</a>
-                    <a class="horizontal-menu-item-2 dropdown-item"  href="#">Prensa</a>
+                    <a class="horizontal-menu-item-2 dropdown-item"  href="#">Reseñas</a>
                     <!--<a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
             </li>
