unchanged horizontal nav-bar

--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -64,6 +64,7 @@
                     MAS
                 </div>
                 <div class="dropdown-menu" style="background-color:#171f2a;" aria-labelledby="dropdownMenuButton">
+                    <a class="horizontal-menu-item-2 dropdown-item horizontal-menu-item-2-selected"  href="/archivo/actividades">Actividades</a>
                     <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/libros">Libros leidos</a>
                     <a class="horizontal-menu-item-2 dropdown-item"  href="#">Reseñas</a>
                 </div>
