--- a/imports/ui/users/archivo/prensaArchivo.html
+++ b/imports/ui/users/archivo/prensaArchivo.html
@@ -91,6 +91,7 @@
             <a href="/"><li class="horizontal-menu-item" data-value="home">HOME</li></a>
             <a href="/nosotros"><li class="horizontal-menu-item" data-value="prensa">NOSOTROS</li></a>
             <a href="https://www.facebook.com/groups/clubdelectura.uy/"  target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
+            <li class="horizontal-menu-item horizontal-menu-item-selected" data-value="colaboradores">PRENSA</li>
             <a href="/colaboradores"><li class="horizontal-menu-item" data-value="colaboradores">COLABORADORES</li></a>
             <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item" data-value="mas">
                 <!--<div class="dropdown dropup">-->
