--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -41,6 +41,7 @@
             <a href="/nosotros"><li class="horizontal-menu-item" data-value="prensa">NOSOTROS</li></a>
             <a href="https://www.facebook.com/groups/clubdelectura.uy/"  target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
             <a href="/archivo/prensa"><li class="horizontal-menu-item" data-value="prensa">PRENSA</li></a>
+            <li class="horizontal-menu-item horizontal-menu-item-selected" data-value="colaboradores">COLABORADORES</li>
             <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item" data-value="mas">
                 <!--<div class="dropdown dropup">-->
                 <div class="btn-secondary" data-toggle="dropdown" style="margin:-25px;padding:25px">
