--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -200,6 +200,7 @@
 
         <div id="nav" data-2200="bottom:-100px" data-2300="bottom:0px" class="bottom-menu {{expandedMenuClass}}">
         <ul>
+           <li class="horizontal-menu-item horizontal-menu-item-selected" data-value="nosotros">HOME</li>
            <a href="/nosotros"><li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li></a>
            <a href="https://www.facebook.com/groups/clubdelectura.uy/" target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
            <a href="/archivo/prensa"><li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="prensa">PRENSA</li></a>
