--- a/imports/ui/users/archivo/actividadesArchivo.html
+++ b/imports/ui/users/archivo/actividadesArchivo.html
@@ -41,7 +41,7 @@
 
             {{/each}}
 
-            <div style="background-color:#2d3e54;position: fixed;width:100%;top:0px;left:0px;z-index:-1;padding-top:100px" >
+            <div class="letritas-container" >
                 <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
                 <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
             </div>
