--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -24,7 +24,7 @@
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
                     {{/each}}
-                        <div style="background-color:#2d3e54;position: fixed;width:100%;top:0px;left:0px;z-index:-1;padding-top:100px" >
+                        <div class="letritas-container" >
                             <div style="background-image:url('../letras_lineadetiempo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh"></div>
                             <div class="rotation-very-slow " style="background-image:url('../letras_lineadetiempo2.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100vh;margin-top:-100vh"></div>
                         </div>
