--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -68,25 +68,26 @@
     </div>
     <div style="width:900px;margin:auto">
 
-        <div style="margin-top:20px;padding:10px;width:100%;background-color:#1d2e39;">
+        <div style="margin-top:20px;padding:10px;width:100%;">
             <span class="" style="text-align:right; font-family: 'Open Sans', sans-serif; color:white; font-size:20px">
                 {{presentacion}}
             </span>
         </div>
 
         {{#each personas}}
-            <div class="row" style="background-color:#1d2e39;padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
+            <div class="row" style="padding-bottom:10px;margin-left:0px;margin-right:0px;margin-top:20px;padding-bottom:20px">
+                <div class="col-md-4" style="padding-left:0px;">
+                    <div style="float:left;padding-top:20px;padding-left: 10px">
+                        <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
+                    </div>
+                </div>
                 <div class="col-md-8" style="padding-right:0px">
                     <div style="padding:20px;">
                         <h3 class="actividad-nombre" style="font-size:18px;">{{nombre}}</h3>
                         <span style="font-family:'Open Sans', sans-serif;font-weight: 700;font-size: 12px;line-height:15px;font-style: normal; color:white;">{{texto}}</span>
                     </div>
                 </div>
-                <div class="col-md-4" style="padding-left:0px;">
-                    <div style="float:right;padding-top:20px;background-color:#1d2e39;">
-                        <img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%">
-                    </div>
-                </div>
+
             </div>
 
         {{/each}}
