--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -18,8 +18,8 @@
                     <div class="row">
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
-                            <div style="height:100px">
-                            <img src="{{urlFoto}}" style="width:100%;max-height:150px;">
+                            <div style="max-height:150px;overflow-y: hidden">
+                                <img src="{{urlFoto}}" style="width:100%;height:auto;">
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
