--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -18,8 +18,10 @@
                     <div class="row">
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
-                            <div style="max-height:150px;overflow-y: hidden">
-                                <img src="{{urlFoto}}" style="width:100%;height:auto;">
+                            <div style="height:250px;overflow-y: hidden;display:table">
+                                <div style="display:table-cell;vertical-align: middle">
+                                    <img src="{{urlFoto}}" style="width:100%;height:auto;">
+                                </div>
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
