--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -18,7 +18,7 @@
                     <div class="row">
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
-                            <div style="height:250px;overflow-y: hidden;display:table">
+                            <div class="logo-button" style="height:225px;overflow-y: hidden;display:table">
                                 <div style="display:table-cell;vertical-align: middle">
                                     <img src="{{urlFoto}}" style="width:100%;height:auto;">
                                 </div>
