--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -20,7 +20,7 @@
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
                             <div class="logo-button" style="height:225px;overflow-y: hidden;display:table">
                                 <div style="display:table-cell;vertical-align: middle">
-                                    <img src="{{urlFoto}}" style="width:100%;height:auto;">
+                                    <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%">
                                 </div>
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
