--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -1,6 +1,6 @@
 <template name="colaboradores">
     <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
-        <div class="titulo" style="width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
+        <div class="titulo" style="margin-bottom:50px;width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
             <div style="width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
 
             </div>
@@ -17,8 +17,8 @@
                 <div class="persona" style="margin-left:65px;margin-right:65px">
                     <div class="row">
                     {{#each colaboradores}}
-                        <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
-                            <div class="logo-button" style="height:225px;overflow-y: hidden;display:table">
+                        <a href="{{url}}"><div class="col-md-4" style="margin-top:5px">
+                            <div class="logo-button" style="border-width:0px;height:225px;overflow-y: hidden;display:table">
                                 <div style="display:table-cell;vertical-align: middle">
                                     <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%">
                                 </div>
