--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -18,9 +18,9 @@
                     <div class="row">
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:5px">
-                            <div class="logo-button" style="border-width:0px;height:225px;overflow-y: hidden;display:table">
-                                <div style="display:table-cell;vertical-align: middle">
-                                    <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%">
+                            <div class="logo-button" style="border-width:0px;height:235px;overflow-y: hidden;display:table">
+                                <div style="display:table-cell;vertical-align: middle;max-height: 235px">
+                                    <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%;max-height: 235px">
                                 </div>
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
