--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -19,7 +19,7 @@
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:5px">
                             <div class="logo-button" style="border-width:0px;height:235px;overflow-y: hidden;display:table">
-                                <div style="display:table-cell;vertical-align: middle;max-height: 235px">
+                                <div style="padding:10px;display:table-cell;vertical-align: middle;max-height: 235px">
                                     <img src="{{urlFoto}}" style="width:100%;height:auto;border-radius: 0%;max-height: 235px">
                                 </div>
                             </div>
