--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -1,8 +1,7 @@
 <template name="colaboradores">
     <div style="min-width:100wh;min-height:100vh;padding-left:10px;padding-right:10px;">
         <div class="titulo" style="margin-bottom:50px;width:974px;margin:auto;padding-left:25px;padding-right:25px;text-align:center">
-            <div style="width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
-
+            <div style="margin-bottom:10px;width:100%;height:270px;background-image: url('../portada_colaboradores.png');background-size:cover; background-repeat:no-repeat;">
             </div>
             <span style=" font-family:'Montserrat';font-weight: 700;font-size: 30px;line-height:30px;font-style: normal; color:white;">
                 COLABORADORES
