--- a/imports/ui/users/templatesImages/niñoLeyendo.html
+++ b/imports/ui/users/templatesImages/niñoLeyendo.html
@@ -2,9 +2,15 @@
     {{#if isDesktop}}
         <div class="{{#if esPar}}col-md-7 par-left{{else}} col-md-5 impar-left{{/if}}" >
             {{#if esPar}}
-                <div style="text-align:center;background-image:url('nino_leyendo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
-                    <span style="margin-left: 180px;color: #faecd7;cursor:pointer">·</span>
+                {{#if evilMorty}}
+                <div style="text-align:center;background-image:url('nino_leyendo_evil.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
+                    <!--<span class="morty" style="margin-left: 180px;color: #faecd7;cursor:pointer">·</span>-->
                 </div>
+                {{else}}
+                <div style="text-align:center;background-image:url('nino_leyendo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
+                    <span class="morty" style="margin-left: 180px;color: #faecd7;cursor:pointer">·</span>
+                </div>
+                {{/if}}
             {{else}}
                 {{>textImpar}}
             {{/if}}
@@ -13,8 +19,15 @@
             {{#if esPar}}
                 {{>textPar}}
             {{else}}
-                <div style="background-image:url('nino_leyendo.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
+                {{#if evilMorty}}
+                <div style="text-align:center;background-image:url('nino_leyendo_evil.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
+                    <!--<span class="morty" style="margin-left: 180px;color: #faecd7;cursor:pointer">·</span>-->
                 </div>
+                {{else}}
+                    <div style="text-align:center;background-image:url('nino_leyendo.png');transform: scaleX(-1);background-size:contain;background-repeat:no-repeat;width:100%;height:100%">
+                        <span class="morty" style="margin-left: 180px;color: #faecd7;cursor:pointer">·</span>
+                    </div>
+                {{/if}}
 
             {{/if}}
         </div>
