--- a/imports/ui/users/templatesImages/museo.html
+++ b/imports/ui/users/templatesImages/museo.html
@@ -19,7 +19,7 @@
 
         <div class="col-sm-8 col-sm-offset-2" style="margin-top:400px">
             <div style="width:100%;padding-right:60px">
-                <div style="width:100%;max-height:180px">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
+                <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
             </div>
 
         </div>
