--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -30,7 +30,7 @@
           <div    class="layer-0" style="position:absolute;width:100%;background-position-x: -100px"> </div>
           <div   class="layer-1" style="height:100vh;background-size:cover;background-position:bottom left;margin-top:0;position:absolute"> </div>
           <div   class="layer-2" style="height:100vh;background-size:cover;background-position:bottom left;margin-top:35vh;position:absolute"> </div>
-          <!--<div  class="layer-letras-transicion" style="position:absolute"> </div>-->
+          <div  class="layer-letras-transicion" style="margin-top:115vh;background-size:cover;position:absolute"> </div>
           <!--<div    class="layer-box" style="height:100vh;position:absolute"></div>-->
           <div    class="layer-3" style="background-size:cover;margin-top:60vh;position:absolute"> </div>
           <div    class="layer-logo" style="position:absolute"> </div>
@@ -153,7 +153,7 @@
     <!--<div id="example-wrapper" class="scrollContainer" style="pointer-events: none;position:relative;height:200vh;">-->
     <!--<div class="scrollContent" style="height:auto;position:relative; width:100vw;">-->
         <!--<div style="position:relative;width:100vw;height:auto">-->
-        <div  id="uniteAFacebook"  class="" style="top:1200px;position:absolute;right:15%;margin-top: 583.333px;">
+        <div  id="uniteAFacebook"  class="" style="top:98vh;z-index:1;position:absolute;right:15%;margin-top: 583.333px;">
            <div class="">
             <h1>
                 <span  class="" style="    top: -70px;
@@ -170,7 +170,7 @@
             <br>
         </div>
         </div>
-    <div style="position:absolute;margin-top:1900px;margin-left:40px;margin-right:40px;">
+    <div style="z-index:1;position:absolute;margin-top:142vh;margin-left:40px;margin-right:40px;">
         <p style="text-align:center;font-family: 'Open Sans', sans-serif;
         color:white;font-size:46px">
             Formá parte del #Clubdelectura.uy, un grupo variopinto de lectores que se reúne mensualmente en Casa Inju a compartir su entusiasmo por la lectura. Comentan libros, conocen nuevos autores y promueven actividades que difundan el hábito de leer. ¡Unite!        </p>
