--- a/imports/ui/users/home.html
+++ b/imports/ui/users/home.html
@@ -198,28 +198,8 @@
 {{#if isDesktop}}
 
 
-        <div id="nav" data-2200="bottom:-100px" data-2300="bottom:0px" class="bottom-menu {{expandedMenuClass}}">
-        <ul>
-           <li class="horizontal-menu-item horizontal-menu-item-selected" data-value="nosotros">HOME</li>
-           <a href="/nosotros"><li class="horizontal-menu-item {{isSelected "nosotros"}}" data-value="nosotros">NOSOTROS</li></a>
-           <a href="https://www.facebook.com/groups/clubdelectura.uy/" target="_blank"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
-           <a href="/archivo/prensa"><li class="horizontal-menu-item {{isSelected "reseñas"}}" data-value="prensa">PRENSA</li></a>
-            <a href="/colaboradores"><li class="horizontal-menu-item {{isSelected "colaboradores"}}" data-value="colaboradores">COLABORADORES</li></a>
-            <!--<li class="horizontal-menu-item {{isSelected "libros"}}" data-value="libros">LIBROS LEIDOS</li>-->
-            <li  id="dropdownMenuButton" class="dropdown dropup horizontal-menu-item {{isSelected "libros"}}" data-value="libros">
-                <!--<div class="dropdown dropup">-->
-                <div class="btn-secondary" data-toggle="dropdown" style="margin:-25px;padding:25px">
-                    MAS
-                </div>
-                <div class="dropdown-menu" style="background-color:#171f2a;" aria-labelledby="dropdownMenuButton">
-                    <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/libros">Libros leidos</a>
-                    <a class="horizontal-menu-item-2 dropdown-item"  href="/archivo/actividades">Actividades</a>
-                    <a class="horizontal-menu-item-2 dropdown-item"  href="#">Reseñas</a>
-                    <!--<a class="dropdown-item" href="#">Something else here</a>-->
-                </div>
-            </li>
-            <!--<li class="horizontal-menu-item">ACTIVIDADES</li>-->
-        </ul>
+    <div id="nav" data-2200="bottom:-100px" data-2300="bottom:0px" class="bottom-menu {{expandedMenuClass}}">
+        {{>barraHorizontal active="home"}}
     </div>
 {{else}}
     <div id="nav" class="bottom-menu {{expandedMenuClass}}" style="z-index:5">
