--- a/imports/ui/users/templatesImages/textActivity.html
+++ b/imports/ui/users/templatesImages/textActivity.html
@@ -35,7 +35,7 @@
 <template name="colaboradoresDisplay">
     {{#if colaboradores}}
         <div style="margin-top:10px;max-height:165px;overflow-y:hidden">
-            <span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">Colaboran: </span>
+            <span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">Participan: </span>
             {{#each colaboradores}}
                 <a href="{{url}}"
                    style="margin-left:5px; font-family: 'Open Sans', sans-serif;color:white;">{{nombre}}</a>
