working on movile

--- a/imports/ui/users/templatesImages/librocasa.html
+++ b/imports/ui/users/templatesImages/librocasa.html
@@ -35,5 +35,8 @@
             <div style="background-image:url('librocasa.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
 
         </div>
+        <div class="col-sm-8 col-sm-offset-2"  style="overflow-y:hidden">
+            <h4><p class="actividad-descripcion">{{texto}}</p></h4>
+        </div>
     {{/if}}
 </template>
