--- a/imports/ui/users/templatesImages/hombre_leyendo.html
+++ b/imports/ui/users/templatesImages/hombre_leyendo.html
@@ -31,6 +31,9 @@
             <div style="background-image:url('hombre_leyendo.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
 
         </div>
+        <div class="col-sm-8 col-sm-offset-2"  style="overflow-y:hidden">
+            <h4><p class="actividad-descripcion">{{texto}}</p></h4>
+        </div>
     {{/if}}
 
     <!--<div class="col-md-12" style="margin-top:-400px;background-image:url('plumas.png');background-size:contain;height:400px"></div>-->
