--- a/imports/ui/users/templatesImages/pareja.html
+++ b/imports/ui/users/templatesImages/pareja.html
@@ -29,7 +29,9 @@
         </div>
         <div class="col-sm-10 col-sm-offset-1" style="height:650px;padding:0;padding-top:50px;" >
             <div style="background-image:url('pareja.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
-
+        </div>
+        <div class="col-sm-8 col-sm-offset-2"  style="overflow-y:hidden">
+            <h4><p class="actividad-descripcion">{{texto}}</p></h4>
         </div>
     {{/if}}
 
